@@ -66,6 +66,15 @@
 \alias{estimateDivergence,SummarizedExperiment-method}
 \alias{meltAssay}
 \alias{meltAssay,SummarizedExperiment-method}
+\alias{transformSamples}
+\alias{transformSamples,SummarizedExperiment-method}
+\alias{ZTransform}
+\alias{ZTransform,SummarizedExperiment-method}
+\alias{relAbundanceCounts}
+\alias{relAbundanceCounts,SummarizedExperiment-method}
+\alias{transformCounts}
+\alias{transformFeatures}
+\alias{transformFeatures,SummarizedExperiment-method}
 \title{These functions will be deprecated. Please use other functions instead.}
 \usage{
 cluster(x, ...)
@@ -195,6 +204,24 @@ estimateDivergence(x, ...)
 meltAssay(x, ...)
 
 \S4method{meltAssay}{SummarizedExperiment}(x, ...)
+
+transformSamples(x, ...)
+
+\S4method{transformSamples}{SummarizedExperiment}(x, ...)
+
+ZTransform(x, ...)
+
+\S4method{ZTransform}{SummarizedExperiment}(x, ...)
+
+relAbundanceCounts(x, ...)
+
+\S4method{relAbundanceCounts}{SummarizedExperiment}(x, ...)
+
+transformCounts(x, ...)
+
+transformFeatures(x, ...)
+
+\S4method{transformFeatures}{SummarizedExperiment}(x, ...)
 }
 \arguments{
 \item{x}{A
