@@ -2,39 +2,9 @@
 % Please edit documentation in R/transformCounts.R
 \name{transformAssay}
 \alias{transformAssay}
-\alias{transformSamples}
-\alias{transformSamples,SummarizedExperiment-method}
-\alias{transformCounts}
 \alias{transformAssay,SummarizedExperiment-method}
-\alias{transformFeatures}
-\alias{transformFeatures,SummarizedExperiment-method}
-\alias{ZTransform}
-\alias{ZTransform,SummarizedExperiment-method}
-\alias{relAbundanceCounts}
-\alias{relAbundanceCounts,SummarizedExperiment-method}
 \title{Transform assay}
 \usage{
-transformSamples(
-  x,
-  assay.type = "counts",
-  assay_name = NULL,
-  method = c("alr", "chi.square", "clr", "frequency", "hellinger", "log", "log10",
-    "log2", "normalize", "pa", "rank", "rclr", "relabundance", "rrank", "total"),
-  name = method,
-  ...
-)
-
-\S4method{transformSamples}{SummarizedExperiment}(
-  x,
-  assay.type = "counts",
-  assay_name = NULL,
-  method = c("alr", "chi.square", "clr", "frequency", "hellinger", "log", "log10",
-    "log2", "normalize", "pa", "rank", "rclr", "relabundance", "rrank", "total"),
-  name = method,
-  pseudocount = FALSE,
-  ...
-)
-
 transformAssay(
   x,
   assay.type = "counts",
@@ -48,8 +18,6 @@ transformAssay(
   ...
 )
 
-transformCounts(x, ...)
-
 \S4method{transformAssay}{SummarizedExperiment}(
   x,
   assay.type = "counts",
@@ -62,36 +30,6 @@ transformCounts(x, ...)
   pseudocount = FALSE,
   ...
 )
-
-transformFeatures(
-  x,
-  assay.type = "counts",
-  assay_name = NULL,
-  method = c("frequency", "log", "log10", "log2", "max", "pa", "range", "standardize",
-    "z"),
-  name = method,
-  pseudocount = FALSE,
-  ...
-)
-
-\S4method{transformFeatures}{SummarizedExperiment}(
-  x,
-  assay.type = "counts",
-  assay_name = NULL,
-  method = c("frequency", "log", "log10", "log2", "max", "pa", "range", "standardize",
-    "z"),
-  name = method,
-  pseudocount = FALSE,
-  ...
-)
-
-ZTransform(x, MARGIN = "features", ...)
-
-\S4method{ZTransform}{SummarizedExperiment}(x, MARGIN = "features", ...)
-
-relAbundanceCounts(x, ...)
-
-\S4method{relAbundanceCounts}{SummarizedExperiment}(x, ...)
 }
 \arguments{
 \item{x}{A
@@ -110,8 +48,17 @@ will be disabled.)}
 \item{method}{A single character value for selecting the transformation
 method.}
 
+\item{MARGIN}{A single character value for specifying whether the
+transformation is applied sample (column) or feature (row) wise.
+(By default: \code{MARGIN = "samples"})}
+
 \item{name}{A single character value specifying the name of transformed
 abundance table.}
+
+\item{pseudocount}{TRUE, FALSE, or a numeric value. When TRUE,
+automatically adds the minimum positive value of \code{assay.type}.
+When FALSE, does not add any pseudocount (pseudocount = 0).
+Alternatively, a user-specified numeric value can be added as pseudocount.}
 
 \item{...}{additional arguments passed on to \code{vegan:decostand}:
 \itemize{
@@ -119,15 +66,6 @@ abundance table.}
 reference sample's column in returned assay when calculating alr.
 (default: \code{ref_vals = NA})
 }}
-
-\item{pseudocount}{TRUE, FALSE, or a numeric value. When TRUE,
-automatically adds the minimum positive value of \code{assay.type}.
-When FALSE, does not add any pseudocount (pseudocount = 0).
-Alternatively, a user-specified numeric value can be added as pseudocount.}
-
-\item{MARGIN}{A single character value for specifying whether the
-transformation is applied sample (column) or feature (row) wise.
-(By default: \code{MARGIN = "samples"})}
 }
 \value{
 \code{transformAssay} returns the input object \code{x}, with a new
